--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
                       <span class="cd-words-wrapper">
                         <b class="is-visible theme-gradient">Web Designer</b>
                         <b class="is-hidden theme-gradient">Web Developer</b>
-                        <b class="is-hidden theme-gradient">UI/UX Designer</b>
-                        <b class="is-hidden theme-gradient">Stylish Model</b>
-                        <b class="is-hidden theme-gradient">Content Writer</b>
+                        <b class="is-hidden theme-gradient">App Developer</b>
+                        <b class="is-hidden theme-gradient">Software Engineer</b>
+                        <b class="is-hidden theme-gradient">System Designer</b>
                       </span>
                     </span>
                   </span>
@@ -336,7 +336,7 @@
                   <h2 class="find-me-on-title">Find me on</h2>
                   <div class="social-link banner">
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.linkedin.com/in/imashiqe/"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                   </div>
